--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ a.custom-card:hover {
       background: #000;
       text-align: right;
       box-sizing: border-box;
-      padding: 15px 24px;
+      padding: 10px 24px;
       cursor: pointer;
       color: #fff;
       display: none;
@@ -127,11 +127,25 @@ a.custom-card:hover {
 
 @media(max-width: 786px) {
 
-      .logo {
+      a.logo {
+            line-height: 60px;
+            position: fixed;
+            float: left;
+            margin: 8px 6px !important;
+            color: #fff;
+            font-family:"vortice-concept",sans-serif;
+            font-weight: 800;
+            top: 0;
+            font-size: 20px !important;
+            text-decoration: none;
+            letter-spacing: 1px;
+      }
+
+      /* .logo {
             position: fixed;
             top: 0;
             margin-top: 20px;
-      }
+      } */
 
       .overlay-text{
             color: #fff;
@@ -152,13 +166,13 @@ a.custom-card:hover {
       }
 
       .showing {
-            max-height: 34em;
+            max-height: 38em;
       }
 
       nav ul li {
             box-sizing: border-box;
             width: 100%;
-            padding: 24px;
+            padding: 27px;
             text-align: center;
       }
 
